tdf#137848 Speed up inserting rotated image

Since writer supports displaying rotation now, we don't need to convert
and rotate the image data itself

Change-Id: I547d8da98125f8956badeb0c113f2d6ab332ee86
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180380
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins